# gptReactions

./: .gitignore  .pre-commit-config.yaml  README.md  app_manifest.yaml  bandit.yml  bot.py  config.py  llm.py  pyproject.toml  requirements.txt  slack_utils.py
reactions/: emoji_map.py  prompt.py  slack_utils.py
reactions/tests/: test_known.py
tests/: test_known.py
weather/: weather.py  weather_codes.py  weather_commands.py
weather/tests/: test_meteo.py
